--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     text-align: center;
     font-weight: bold;
   }
-  .m-p-other {
+  .m-p-other, .m-p-github {
     position: fixed;
     right: 50px;
     bottom: 70px;
@@ -53,7 +53,23 @@
     padding: 6px 12px;
     z-index: 99;
   }
-  .m-p-other:hover {
+  .m-p-help {
+    position: fixed;
+    right: 50px;
+    top: 50px;
+    width: 30px;
+    height: 30px;
+    color: #666666;
+    z-index: 2;
+    line-height: 30px;
+    font-weight: bolder;
+    border-radius: 50%;
+    border: 1px solid rgba(27, 31, 35, .2);
+    cursor: pointer;
+    background-color: #eff3f6;
+    background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
+  }
+  .m-p-github:hover, .m-p-other:hover, .m-p-help {
     opacity: 0.9;
   }
   .m-p-other {
@@ -194,6 +210,8 @@
 <section id="m-app" v-cloak>
   <!--顶部操作提示-->
   <section class="m-p-action g-box">{{tips}}</section>
+  <a class="m-p-help" target="_blank" href="https://segmentfault.com/a/1190000021847172">?</a>
+  <a class="m-p-github" target="_blank" href="https://github.com/Momo707577045/m3u8-downloader">github</a>
   <a class="m-p-other" target="_blank" href="http://blog.luckly-mjw.cn/tool-show/index.html">其他实用工具</a>
 
   <!--文件载入-->
@@ -431,7 +449,7 @@ new Vue({
     // 下载整合后的TS文件
     downloadFile(fileDataList, fileName, fileType) {
       this.tips = 'ts 碎片整合中，请留意浏览器下载'
-      const fileBlob = new Blob(fileDataList) // 创建一个Blob对象
+      const fileBlob = new Blob(fileDataList, { type: 'video/MP2T' }) // 创建一个Blob对象，并设置文件的 MIME 类型
       const a = document.createElement('a')
       a.download = fileName + '.' + fileType
       a.href = URL.createObjectURL(fileBlob)
