--- a/index.html
+++ b/index.html
@@ -553,8 +553,10 @@ new Vue({
     // 获取AES配置
     getAES() {
       alert('视频被 AES 加密，点击确认，进行视频解码')
+      let aseConfURL = this.aesConf.uri;
+      aseConfURL = prompt("请确认AES key的下载链接，看情况修改！",aseConfURL);
       this.ajax({
-        url: this.aesConf.uri,
+        url: aseConfURL,
         success: (key) => {
           this.aesConf.key = this.aesConf.stringToBuffer(key)
           this.aesConf.decryptor = new AESDecryptor()
