更新库的链接

--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@ var _hmt = _hmt || [];
 </script>
 <!--vue 前端框架-->
 <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
-<script src="http://blog.luckly-mjw.cn/tool-show/m3u8-downloader/aes-decryptor.js"></script>
-<script src="http://blog.luckly-mjw.cn/tool-show/m3u8-downloader/mux-mp4.js"></script>
+<script src="aes-decryptor.js"></script>
+<script src="mux-mp4.js"></script>
 
 <script>
 // script注入
