--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
   <a v-if="isShowRefer" class="m-p-refer" target="_blank" href="https://segmentfault.com/a/1190000024416860">
     <img src="./imgs/001.png" class="link">
     <img src="./imgs/003.png" class="text">
-    <i class="close" @click.prevent="isShowRefer=false"/>
+    <i class="close" @click.prevent="isShowRefer=false"></i>
   </a>
 
   <!--文件载入-->
@@ -755,6 +755,14 @@ new Vue({
           $section.style.backgroundColor = 'white'
           document.body.appendChild($section);
 
+          // 加载 ASE 解密
+          let $ase = document.createElement('script')
+          $ase.src = 'http://blog.luckly-mjw.cn/tool-show/m3u8-downloader/aes-decryptor.js'
+
+          // 加载 mp4 转码
+          let $mp4 = document.createElement('script')
+          $mp4.src = 'http://blog.luckly-mjw.cn/tool-show/m3u8-downloader/mux-mp4.js'
+
           // 加载 vue
           let $vue = document.createElement('script')
           $vue.src = 'https://cdn.bootcss.com/vue/2.6.10/vue.min.js'
@@ -762,6 +770,8 @@ new Vue({
           // 监听 vue 加载完成，执行业务代码
           $vue.addEventListener('load', () => {${script}})
           document.body.appendChild($vue);
+          document.body.appendChild($mp4);
+          document.body.appendChild($ase);
           alert('注入成功，请滚动到页面底部')
           `;
             this.copyToClipboard(codeStr);
